# bribe

./: .gitignore  .travis.yml  README.md  bribe.cabal  cabal.project  stack.yaml
.travis/: attach-binary.sh  install-ghr.sh
src/: Bribe.hs  Command.hs  Main.hs  Settings.hs
