name:                bribe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/bribe#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bribe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , data-default
                     , directory
                     , fused-effects
                     , fused-effects
                     , optparse-applicative
                     , pathtype
                     , prettyprinter
                     , process
                     , req
                     , text
                     , unix
                     , unordered-containers
                     , yaml
