cabal-version:       2.2
name:                bribe
version:             0.1.0.0
synopsis:            Aggregate dependency licenses
homepage:            https://github.com/patrickt/bribe#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            CLI
build-type:          Simple
extra-source-files:  README.md

common haskell
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveAnyClass
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications

executable bribe
  import:              haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bribe
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , data-default
                     , directory
                     , fused-effects
                     , fused-effects
                     , optparse-applicative
                     , pathtype
                     , prettyprinter
                     , process
                     , req
                     , text
                     , unix
                     , unordered-containers
                     , yaml
