name:                bribe
version:             0.2.0.0
synopsis:            Aggregate dependency licenses
description:         A fast, licensed-compatible tool to download and cache licenses of Stack dependencies.
homepage:            https://github.com/patrickt/bribe#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bribe
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveAnyClass
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , StandaloneDeriving
                     , StrictData
                     , TypeApplications
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bribe
                     , Command
                     , Settings
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4 && < 2
                     , attoparsec >= 0.13 && < 1
                     , bytestring >= 0.10 && < 1
                     , Cabal >= 2.4
                     , containers >= 0.6 && < 1
                     , data-default >= 0.7 && < 1
                     , directory >= 1.3 && < 2
                     , fused-effects >= 0.1.2.1 && < 3
                     , generic-monoid >= 0.1
                     , optparse-applicative >= 0.14 && < 1
                     , pathtype >= 0.8 && < 1
                     , prettyprinter >= 1.2 && < 2
                     , process >= 1.6 && < 2
                     , req == 1.2.*
                     , text >= 1.2 && < 2
                     , unix >= 2.7 && < 3
                     , unordered-containers >= 0.2.9 && < 1
                     , yaml >= 0.11

source-repository head
  type:     git
  location: https://github.com/patrickt/bribe
